fix: make CORS allowed origins configurable via env variable